[gd_scene load_steps=6 format=3 uid="uid://ynmgrxw25he7"]

[ext_resource type="Script" uid="uid://bg311c3tw06j7" path="res://GameSystem/WeaponManager/Weapons/sword/scene/sword.gd" id="1_6wxrq"]
[ext_resource type="PackedScene" uid="uid://djj783bpwtmvx" path="res://GameSystem/WeaponManager/Weapons/PhysicalComponent/PhysicalComponent.tscn" id="2_fe5hh"]
[ext_resource type="Texture2D" uid="uid://dr1u2eedgoabu" path="res://Asset/Weapons/sword.png" id="3_cueqx"]

[sub_resource type="Image" id="Image_26xrp"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 2, 1, 0, 33, 27, 20, 0, 201, 165, 125, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 7, 5, 4, 0, 53, 44, 33, 0, 160, 131, 99, 0, 205, 168, 128, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 7, 5, 4, 0, 58, 48, 36, 0, 148, 121, 92, 0, 202, 165, 125, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 2, 1, 0, 53, 44, 33, 0, 148, 121, 92, 0, 199, 163, 124, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 9, 165, 213, 171, 134, 154, 225, 183, 167, 162, 217, 174, 143, 207, 170, 129, 9, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 31, 26, 19, 0, 160, 131, 99, 0, 202, 165, 125, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 5, 166, 212, 170, 135, 129, 252, 209, 247, 127, 255, 212, 255, 128, 252, 209, 249, 162, 217, 174, 143, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 18, 14, 10, 0, 186, 153, 116, 0, 205, 168, 128, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 206, 170, 129, 1, 173, 206, 164, 108, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 154, 225, 183, 167, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 6, 5, 3, 0, 49, 40, 30, 0, 168, 137, 104, 0, 204, 167, 127, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 206, 170, 129, 1, 175, 203, 161, 99, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 129, 252, 209, 247, 165, 213, 171, 134, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 7, 6, 4, 0, 58, 48, 36, 0, 150, 123, 93, 0, 203, 167, 127, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 5, 173, 206, 164, 108, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 166, 212, 170, 135, 207, 170, 129, 9, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 3, 2, 0, 56, 46, 34, 0, 147, 120, 91, 0, 199, 164, 124, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 9, 166, 212, 170, 135, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 173, 206, 164, 108, 207, 170, 129, 5, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 41, 34, 26, 0, 154, 126, 95, 0, 200, 164, 125, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 7, 165, 213, 171, 139, 129, 252, 209, 247, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 175, 203, 161, 99, 206, 170, 129, 1, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 6, 4, 0, 180, 147, 112, 0, 205, 169, 128, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 170, 208, 166, 117, 127, 254, 211, 252, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 173, 206, 164, 108, 206, 170, 129, 1, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 205, 169, 128, 0, 202, 166, 125, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 3, 2, 0, 41, 34, 26, 0, 180, 147, 112, 0, 204, 167, 126, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 205, 171, 130, 3, 175, 203, 161, 100, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 129, 252, 209, 247, 166, 212, 170, 135, 207, 170, 129, 5, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 202, 166, 126, 0, 160, 131, 99, 0, 34, 28, 21, 0, 32, 24, 18, 0, 32, 24, 18, 0, 32, 24, 18, 0, 32, 24, 18, 0, 32, 24, 18, 0, 32, 24, 18, 0, 32, 24, 18, 0, 32, 24, 18, 0, 59, 47, 35, 0, 153, 125, 95, 0, 205, 169, 128, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 3, 174, 204, 162, 103, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 254, 211, 252, 165, 213, 171, 139, 207, 170, 129, 9, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 199, 163, 124, 0, 149, 122, 92, 0, 54, 44, 33, 0, 2, 2, 1, 0, 134, 103, 79, 0, 134, 103, 79, 0, 134, 103, 79, 0, 134, 103, 79, 0, 134, 103, 79, 0, 134, 103, 79, 0, 134, 103, 79, 0, 134, 103, 79, 0, 149, 116, 89, 0, 196, 160, 121, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 8, 168, 210, 168, 128, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 170, 208, 166, 118, 207, 170, 129, 7, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 202, 166, 126, 0, 149, 122, 92, 0, 59, 48, 36, 0, 7, 6, 4, 0, 0, 0, 0, 0, 161, 123, 95, 0, 168, 130, 99, 0, 171, 132, 101, 0, 171, 132, 101, 0, 171, 132, 101, 0, 171, 132, 101, 0, 171, 132, 101, 0, 171, 132, 101, 0, 178, 139, 106, 0, 201, 164, 124, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 8, 165, 213, 171, 141, 129, 252, 209, 248, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 175, 203, 161, 100, 207, 170, 129, 1, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 205, 169, 128, 0, 160, 131, 99, 0, 54, 44, 33, 0, 7, 6, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 121, 88, 72, 0, 159, 121, 93, 0, 170, 131, 100, 0, 171, 132, 101, 0, 171, 132, 101, 0, 171, 132, 101, 0, 171, 132, 101, 0, 171, 132, 101, 0, 177, 138, 105, 0, 199, 161, 123, 0, 206, 169, 128, 0, 207, 170, 129, 0, 207, 170, 129, 3, 168, 210, 168, 128, 129, 252, 209, 248, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 174, 204, 162, 103, 205, 171, 130, 3, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 204, 167, 127, 0, 188, 154, 117, 0, 32, 26, 19, 0, 2, 2, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 114, 82, 68, 0, 125, 92, 74, 0, 157, 119, 92, 0, 167, 138, 107, 15, 166, 143, 111, 23, 166, 143, 111, 23, 167, 141, 109, 18, 171, 132, 101, 0, 171, 132, 101, 0, 178, 139, 106, 0, 206, 169, 128, 0, 205, 171, 130, 3, 174, 204, 162, 103, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 129, 252, 209, 248, 168, 210, 168, 128, 207, 170, 129, 3, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 203, 167, 127, 0, 168, 138, 105, 0, 19, 15, 11, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 114, 82, 68, 0, 115, 83, 68, 0, 129, 116, 94, 33, 131, 219, 181, 191, 127, 255, 212, 255, 127, 255, 212, 255, 133, 235, 194, 214, 158, 166, 132, 71, 165, 146, 113, 29, 175, 136, 104, 0, 206, 169, 128, 0, 175, 203, 161, 100, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 129, 252, 209, 248, 165, 213, 171, 141, 207, 170, 129, 9, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 199, 164, 124, 0, 151, 123, 94, 0, 49, 40, 31, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 114, 82, 68, 0, 114, 82, 68, 0, 120, 163, 135, 119, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 140, 216, 176, 174, 152, 192, 155, 119, 169, 209, 167, 121, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 168, 210, 168, 128, 207, 170, 129, 9, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 200, 164, 125, 0, 147, 121, 92, 0, 58, 48, 36, 0, 6, 5, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 114, 82, 68, 0, 114, 82, 68, 0, 120, 163, 135, 119, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 174, 204, 162, 103, 207, 170, 129, 3, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 205, 169, 128, 0, 154, 127, 96, 0, 57, 47, 35, 0, 7, 6, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 114, 82, 68, 0, 114, 82, 68, 0, 114, 94, 78, 18, 123, 204, 170, 181, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 175, 203, 161, 100, 205, 171, 130, 3, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 204, 167, 126, 0, 180, 148, 112, 0, 42, 35, 26, 0, 4, 3, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 114, 82, 68, 0, 114, 82, 68, 0, 114, 82, 68, 0, 122, 191, 159, 162, 126, 254, 211, 253, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 169, 209, 167, 121, 206, 169, 128, 1, 206, 169, 128, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 205, 169, 128, 0, 180, 148, 112, 0, 10, 8, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 114, 82, 68, 0, 114, 82, 68, 0, 114, 82, 68, 0, 114, 82, 68, 6, 124, 227, 189, 216, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 152, 192, 155, 119, 179, 141, 108, 0, 199, 162, 123, 0, 201, 164, 124, 0, 201, 164, 124, 0, 196, 160, 121, 0, 153, 126, 95, 0, 42, 35, 26, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 132, 99, 80, 0, 132, 99, 80, 0, 128, 96, 77, 0, 117, 85, 70, 0, 124, 227, 189, 215, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 140, 216, 176, 174, 166, 147, 114, 29, 177, 139, 105, 0, 178, 139, 106, 0, 178, 139, 106, 0, 149, 117, 89, 0, 59, 47, 36, 0, 4, 3, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 187, 152, 116, 0, 187, 152, 116, 0, 176, 141, 108, 0, 142, 109, 86, 0, 127, 230, 191, 215, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 158, 166, 132, 71, 171, 132, 101, 0, 171, 132, 101, 0, 171, 132, 101, 0, 134, 104, 79, 0, 32, 25, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 207, 170, 129, 0, 207, 170, 129, 0, 204, 167, 127, 0, 195, 159, 121, 6, 137, 239, 197, 216, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 133, 235, 194, 214, 167, 141, 109, 18, 171, 132, 101, 0, 171, 132, 101, 0, 134, 104, 79, 0, 32, 25, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 156, 224, 181, 163, 127, 254, 211, 253, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 166, 143, 111, 23, 171, 132, 101, 0, 171, 132, 101, 0, 134, 104, 79, 0, 32, 25, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 207, 170, 129, 0, 203, 173, 132, 11, 162, 216, 174, 140, 127, 255, 212, 255, 127, 255, 212, 255, 127, 254, 211, 253, 137, 239, 197, 216, 127, 230, 191, 215, 124, 227, 189, 215, 124, 227, 189, 216, 126, 254, 211, 253, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 166, 143, 111, 23, 171, 132, 101, 0, 171, 132, 101, 0, 134, 104, 79, 0, 32, 25, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 204, 172, 131, 8, 164, 214, 172, 134, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 156, 224, 181, 163, 195, 159, 121, 7, 142, 109, 86, 0, 117, 85, 70, 0, 114, 82, 68, 6, 122, 191, 159, 162, 123, 204, 170, 181, 127, 255, 212, 255, 127, 255, 212, 255, 131, 219, 181, 191, 167, 138, 107, 15, 171, 132, 101, 0, 171, 132, 101, 0, 134, 104, 79, 0, 32, 25, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 199, 177, 136, 23, 127, 255, 212, 255, 127, 255, 212, 255, 127, 255, 212, 255, 162, 216, 174, 140, 207, 170, 129, 1, 204, 167, 127, 0, 176, 141, 108, 0, 128, 96, 77, 0, 114, 82, 68, 0, 114, 82, 68, 0, 114, 94, 78, 18, 120, 163, 135, 119, 120, 163, 135, 119, 129, 116, 94, 33, 157, 119, 92, 0, 170, 131, 100, 0, 171, 132, 101, 0, 134, 104, 79, 0, 32, 25, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 199, 177, 136, 23, 127, 255, 212, 255, 127, 255, 212, 255, 164, 214, 172, 134, 203, 173, 132, 11, 207, 170, 129, 0, 207, 170, 129, 0, 187, 152, 116, 0, 132, 99, 80, 0, 114, 82, 68, 0, 114, 82, 68, 0, 114, 82, 68, 0, 114, 82, 68, 0, 114, 82, 68, 0, 115, 83, 68, 0, 125, 91, 73, 0, 159, 121, 93, 0, 168, 130, 99, 0, 134, 104, 79, 0, 32, 25, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 206, 170, 129, 2, 199, 177, 136, 23, 199, 177, 136, 23, 204, 172, 131, 8, 207, 170, 129, 0, 207, 170, 129, 0, 207, 170, 129, 0, 187, 152, 116, 0, 132, 99, 80, 0, 114, 82, 68, 0, 114, 82, 68, 0, 114, 82, 68, 0, 114, 82, 68, 0, 114, 82, 68, 0, 114, 82, 68, 0, 114, 82, 68, 0, 121, 88, 72, 0, 161, 123, 95, 0, 134, 104, 79, 0, 32, 25, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 32,
"mipmaps": false,
"width": 32
}

[sub_resource type="ImageTexture" id="ImageTexture_8s3ly"]
image = SubResource("Image_26xrp")

[node name="Sword" type="Node2D"]
script = ExtResource("1_6wxrq")
NAME = "Sword"
metadata/_custom_type_script = "uid://br3cmpsmi068y"

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-3, -1, -3, 1, 0, 1, 0, 3, 21, 3, 25, 0, 21, -3, 0, -3, 0, -1)

[node name="PhysicalComponent" parent="." instance=ExtResource("2_fe5hh")]
unique_name_in_owner = true
position = Vector2(17, 0)
rotation = 0.777493
freeze = true
texture = ExtResource("3_cueqx")

[node name="RigidCollision" parent="PhysicalComponent" index="0"]
polygon = PackedVector2Array(9, -12, -5, 1, -5, 2, -7, 1, -14, 1, -14, 12, -15, 12, -15, 15, -10, 13, -10, 12, -4, 14, -1, 14, -2, 7, -2, 5, 12, -9, 13, -9, 13, -12, 9, -13)

[node name="MetaBallLine" parent="PhysicalComponent" index="1"]
points = PackedVector2Array(9, -12, -5, 1, -5, 2, -7, 1, -14, 1, -14, 12, -15, 12, -15, 15, -10, 13, -10, 12, -4, 14, -1, 14, -2, 7, -2, 5, 12, -9, 13, -9, 13, -12, 9, -13)

[node name="Sprite2D" parent="PhysicalComponent" index="2"]
texture = SubResource("ImageTexture_8s3ly")

[node name="GlueCollision" parent="PhysicalComponent/GlueArea" index="0"]
polygon = PackedVector2Array(8.53835, -15.177, 7, -13.9759, 7, -12.8721, -6.04524, -0.75869, -6.31386, -0.893, -6.76713, -1, -14.8284, -1, -16, 0.17157, -16, 10.1716, -17, 11.1716, -17, 16.0612, -15.2425, 17.2511, -8.68773, 14.6292, -8.64158, 14.561, -4.47951, 15.9483, -4.16122, 16, -0.08718, 16, 1.10899, 14.6208, 0, 6.85786, 0, 5.82842, 12.8284, -7, 13.8284, -7, 15, -8.17157, 15, -12.6883, 14.1528, -13.7733)

[node name="WeaponCollision" parent="PhysicalComponent/WeaponArea" index="0"]
polygon = PackedVector2Array(9, -12, -5, 1, -5, 2, -7, 1, -14, 1, -14, 12, -15, 12, -15, 15, -10, 13, -10, 12, -4, 14, -1, 14, -2, 7, -2, 5, 12, -9, 13, -9, 13, -12, 9, -13)

[connection signal="input_event" from="PhysicalComponent" to="." method="_on_physical_component_input_event"]
[connection signal="mouse_entered" from="PhysicalComponent" to="." method="_on_physical_component_mouse_entered"]
[connection signal="mouse_exited" from="PhysicalComponent" to="." method="_on_physical_component_mouse_exited"]

[editable path="PhysicalComponent"]
